# GGD-SO101

./: LICENSE  README.md  docker-compose.yml
Design/: architecture.xml
src/perception/: Dockerfile  entrypoint.sh
src/perception/ros2_perception/: CMakeLists.txt  package.xml
src/perception/ros2_perception/src/: perception_node.cpp
src/simulation/: Dockerfile  entrypoint.sh  ggd_world.wbt
src/triage/: Dockerfile
src/web_bridge/: Dockerfile  entrypoint.sh  index.html  main.py  script.js  style.css
src/web_bridge/ros2_bridge/: CMakeLists.txt  package.xml
src/web_bridge/ros2_bridge/src/: image_bridge_node.cpp
